--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"dependencies": {
 		"@inlang/paraglide-sveltekit": "^0.11.1",
+		"@vercel/blob": "^0.26.0",
 		"drizzle-orm": "^0.33.0",
 		"postgres": "^3.4.4"
 	},
